# R2-Gallery

./: .gitignore  README.md  dev-log.md  pyproject.toml  setup.cfg
src/r2gallery/: __init__.py  const.py  main.py  model.py  r2.py  util.py
src/r2gallery/templates/: album.toml  album_index.html  album_index_list.html  album_index_single.html  album_index_story.html  base.html  base_local.html  gallery.toml  index.html  index_list.html  index_local.html  index_single.html  index_story.html  local_album_index.html  local_index.html  local_pic.html  local_pics.js  pic.html  pics_id_list.js  picture.toml  r2_album_index.html  r2_index.html  r2_pic.html  web_album_index.html  web_index.html  web_pic.html
