[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "R2-Gallery"
authors = [{name = "ahui", email = "102419@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "arrow",
  "click",
  "jinja2",
  "tomli",
]
requires-python = ">=3.10"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/ahui2016/R2-Gallery"

[project.scripts]
r2g = "r2gallery.main:cli"

[tool.black]
line-length = 79
