[metadata]
name = r2-gallery
version = attr: r2gallery.__version__
author = ahui
author_email = 102419@gmail.com
description = R2-Gallery: A static photo album generator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahui2016/R2-Gallery
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.10
packages = find:

[options.packages.find]
where = src

[flake8]
ignore = E203, E501, W503
